# bbs-search-backend

./: Cargo.toml  README.md
adapter/: Cargo.toml
adapter/src/database/: mod.rs
adapter/src/database/model/: search.rs
adapter/src/repository/: search.rs
api/: Cargo.toml
api/src/handler/: search.rs
api/src/model/: search.rs
api/src/route/: search.rs  v1.rs
kernel/: Cargo.toml
kernel/src/model/search/: mod.rs
kernel/src/repository/: search.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: env.rs  error.rs  lib.rs
src/: main.rs
