[package]
name = "bbs-search-backend"
version = "0.1.0"
edition.workspace = true

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
adapter = { path = "adapter" }
api = { path = "api" }
kernel = { path = "kernel" }
shared = { path = "shared" }
registry = { path = "registry" }
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] } 
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "macros", "runtime-tokio-rustls"] }
thiserror = "1"
tracing = "0.1.41"

[dependencies]
adapter.workspace = true
api.workspace = true
kernel.workspace = true
shared.workspace = true
registry.workspace = true
tower-http = { version = "0.6.1", features = ["cors"] }
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["full"] }
